--- a/index.html
+++ b/index.html
@@ -33,26 +33,15 @@
             </div>
             
             <div class="shelf-scroll">
-                <div class="book-node">
-                    <img src="img/cleared.png" alt="Level 10">
-                    <span class="lv-text">X</span>
-                </div>
-                <div class="book-node">
-                    <img src="img/cleared.png" alt="Level 11">
-                    <span class="lv-text">XI</span>
-                </div>
-                <div class="book-node">
-                    <img src="img/locked.png" alt="Level 13">
-                    <span class="lv-text">XIII</span>
-                </div>
-                <div class="book-node">
-                    <img src="img/locked.png" alt="Level 14">
-                    <span class="lv-text">XIV</span>
-                </div>
+                <div class="book-node"><img src="img/cleared.png"><span class="lv-text">X</span></div>
+                <div class="book-node"><img src="img/cleared.png"><span class="lv-text">XI</span></div>
+                <div class="book-node"><img src="img/locked.png"><span class="lv-text">XIII</span></div>
+                <div class="book-node"><img src="img/locked.png"><span class="lv-text">XIV</span></div>
             </div>
 
             <nav class="bottom-nav">
                 <button class="btn-challenge">CHALLENGE Z</button>
+                
                 <div class="quick-icons">
                     <button class="icon-tab">👤</button>
                     <button class="icon-tab">🛒</button>
