--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <div class="app-container">
         <div class="main-background"></div>
+        <div class="bottom-right-mask"></div>
 
         <header class="app-header">
             <div class="user-info-box">
@@ -41,7 +42,6 @@
 
             <nav class="bottom-nav">
                 <button class="btn-challenge">CHALLENGE Z</button>
-                
                 <div class="quick-icons">
                     <button class="icon-tab">👤</button>
                     <button class="icon-tab">🛒</button>
