--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             </div>
 
             <nav class="navigation">
-                <button class="btn-challenge">CHALLENGE Z</button>
+                <button class="btn-challenge">
+                    <img src="img/challenge.png" alt="Challenge Z">
+                </button>
                 
                 <div class="menu-icons">
                     <button class="menu-btn">👤</button>
