--- a/index.html
+++ b/index.html
@@ -42,11 +42,9 @@
             </div>
 
             <nav class="bottom-nav">
-                <div class="challenge-wrapper">
-                    <button class="btn-challenge">
-                        <img src="img/challenge.png" alt="Challenge Z">
-                    </button>
-                </div>
+                <button class="btn-challenge">
+                    <img src="img/challenge.png" alt="Challenge Z Icon">
+                </button>
                 
                 <div class="quick-icons">
                     <button class="icon-tab">👤</button>
