--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
 
-    <div class="background-fixed">
-        <img src="img/bg_main.webp" alt="">
-    </div>
+    <div class="app-container">
+        <div class="bg-layer">
+            <img src="img/bg_main.webp" alt="background">
+        </div>
 
-    <div class="app-wrapper">
-        <main class="content">
+        <main class="content-view">
             <div class="level-list">
-                <img src="img/cleared.png" class="level-icon">
+                <div class="spacer"></div> <img src="img/cleared.png" class="level-icon">
                 <img src="img/current.png" class="level-icon">
                 <img src="img/locked.png" class="level-icon">
                 
-                <div class="challenge-area">
+                <div class="challenge-group">
                     <img src="img/challenge.png">
                     <p>Challenge-Z</p>
                 </div>
             </div>
         </main>
 
-        <nav class="bottom-bar">
-            <div class="btn">프로필</div>
-            <div class="btn">상점</div>
-            <div class="btn">리더보드</div>
+        <nav class="bottom-nav">
+            <div class="nav-item">프로필</div>
+            <div class="nav-item">상점</div>
+            <div class="nav-item">리더보드</div>
         </nav>
     </div>
 
