--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 <body>
 
     <div class="app-container">
-        <div class="bg-layer">
-            <img src="img/bg_main.webp" alt="background">
+        <div class="background-layer">
+            <img src="img/bg_main.webp" alt="Background">
         </div>
 
-        <main class="content-view">
+        <div id="game-content">
             <div class="level-list">
-                <div class="spacer"></div> <img src="img/cleared.png" class="level-icon">
-                <img src="img/current.png" class="level-icon">
-                <img src="img/locked.png" class="level-icon">
+                <div class="spacer"></div>
+                <img src="img/cleared.png" class="level-btn">
+                <img src="img/current.png" class="level-btn">
+                <img src="img/locked.png" class="level-btn">
                 
                 <div class="challenge-group">
                     <img src="img/challenge.png">
                     <p>Challenge-Z</p>
                 </div>
             </div>
-        </main>
+        </div>
 
-        <nav class="bottom-nav">
+        <footer id="bottom-menu">
             <div class="nav-item">프로필</div>
             <div class="nav-item">상점</div>
             <div class="nav-item">리더보드</div>
-        </nav>
+        </footer>
     </div>
 
 </body>
