--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
 </head>
 <body>
 
-    <div class="container">
-        <div class="center-section">
-            <div class="level-display">
-                <img src="img/current.png" alt="Current Level" class="current-img">
+    <div class="game-container">
+        <div class="main-center">
+            <div class="level-box">
+                <img src="img/current.png" alt="Current Level">
                 <p>Current Level</p>
             </div>
         </div>
 
-        <div class="bottom-section">
+        <div class="bottom-area">
             
-            <div class="status-row">
-                <div class="status-item left">
-                    <img src="img/cleared.png" alt="Cleared Level">
+            <div class="status-books">
+                <div class="book-item left">
+                    <img src="img/cleared.png" alt="Cleared">
                     <span>Cleared</span>
                 </div>
-                <div class="status-item right">
-                    <img src="img/locked.png" alt="Locked Level">
+                <div class="book-item right">
+                    <img src="img/locked.png" alt="Locked">
                     <span>Locked</span>
                 </div>
             </div>
 
-            <div class="challenge-row">
+            <div class="challenge-title">
                 <img src="img/challenge.png" alt="Challenge Z">
                 <h3>Challenge-Z</h3>
             </div>
 
-            <nav class="menu-bar">
-                <button type="button">프로파일</button>
-                <button type="button">상점</button>
-                <button type="button">리더보드</button>
-                <button type="button">명예의전당</button>
-            </nav>
+            <div class="bottom-menu">
+                <button>프로파일</button>
+                <button>상점</button>
+                <button>리더보드</button>
+                <button>명예의전당</button>
+            </div>
         </div>
     </div>
 
