--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
 
-    <div class="game-container">
+    <div class="game-wrapper">
         
         <div class="center-area">
-            <div class="level-display">
-                <img src="img/current.png" alt="Current Level" class="main-icon glow-effect">
-                <h2 class="text-glow">CURRENT LEVEL</h2>
+            <div class="level-box">
+                <img src="img/current.png" alt="Current Level" class="main-icon">
+                <h2 class="glow-text">CURRENT LEVEL</h2>
             </div>
         </div>
 
@@ -22,24 +22,24 @@
             <div class="status-row">
                 <div class="status-item">
                     <img src="img/cleared.png" alt="Cleared">
-                    <span class="text-glow">Cleared</span>
+                    <span>Cleared</span>
                 </div>
                 <div class="status-item">
                     <img src="img/locked.png" alt="Locked">
-                    <span class="text-glow">Locked</span>
+                    <span>Locked</span>
                 </div>
             </div>
 
             <div class="challenge-row">
-                <img src="img/challenge.png" alt="Challenge Z" class="challenge-icon">
-                <h3 class="text-glow">Challenge-Z</h3>
+                <img src="img/challenge.png" alt="Challenge Z">
+                <h3>Challenge-Z</h3>
             </div>
 
             <nav class="menu-bar">
-                <button class="btn">프로필</button>
-                <button class="btn">상점</button>
-                <button class="btn">리더보드</button>
-                <button class="btn">명예의전당</button>
+                <button>프로파일</button>
+                <button>상점</button>
+                <button>리더보드</button>
+                <button>명예의전당</button>
             </nav>
         </div>
     </div>
