--- a/index.html
+++ b/index.html
@@ -12,43 +12,43 @@
         
         <div class="shelf shelf-top">
             <div class="level-box">
-                <img src="img/current.png" alt="Current Level" class="icon-large">
-                <h2 class="text-large">CURRENT LEVEL 12</h2>
+                <img src="img/current.png" alt="Current Level" class="img-responsive main-size">
+                <h2 class="text-responsive title-size">CURRENT LEVEL 12</h2>
             </div>
         </div>
 
         <div class="shelf shelf-middle">
             <div class="book-item">
-                <img src="img/cleared.png" alt="Cleared">
-                <span>LEVEL 10</span>
+                <img src="img/cleared.png" alt="Cleared" class="img-responsive sub-size">
+                <span class="text-responsive sub-text-size">LV.10</span>
             </div>
             <div class="book-item">
-                <img src="img/cleared.png" alt="Cleared">
-                <span>LEVEL 11</span>
+                <img src="img/cleared.png" alt="Cleared" class="img-responsive sub-size">
+                <span class="text-responsive sub-text-size">LV.11</span>
             </div>
 
             <div class="book-item">
-                <img src="img/locked.png" alt="Locked">
-                <span>LEVEL 13</span>
+                <img src="img/locked.png" alt="Locked" class="img-responsive sub-size">
+                <span class="text-responsive sub-text-size">LV.13</span>
             </div>
             <div class="book-item">
-                <img src="img/locked.png" alt="Locked">
-                <span>LEVEL 14</span>
+                <img src="img/locked.png" alt="Locked" class="img-responsive sub-size">
+                <span class="text-responsive sub-text-size">LV.14</span>
             </div>
         </div>
 
         <div class="shelf shelf-bottom">
             <div class="challenge-box">
-                <img src="img/challenge.png" alt="Challenge Z" class="icon-large">
-                <h3 class="text-challenge">CHALLENGE-Z</h3>
+                <img src="img/challenge.png" alt="Challenge Z" class="img-responsive challenge-size">
+                <h3 class="text-responsive title-size challenge-color">CHALLENGE-Z</h3>
             </div>
         </div>
 
         <nav class="menu-bar">
             <button type="button">PROFILE</button>
             <button type="button">SHOP</button>
-            <button type="button">LEADERBOARD</button>
-            <button type="button">HALL OF FAME</button>
+            <button type="button">RANK</button>
+            <button type="button">FAME</button>
         </nav>
 
     </div>
