--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <div class="game-wrapper">
         
         <div class="shelf shelf-top">
+            <img src="img/shop.png" alt="Shop" class="icon-float icon-shop">
+            
+            <img src="img/profile.png" alt="Profile" class="icon-float icon-profile">
+
             <div class="level-box">
                 <img src="img/current.png" alt="Current Level" class="img-responsive main-size">
-                <h2 class="text-responsive title-size">CURRENT LEVEL 12</h2>
+                <h2 class="text-responsive main-text-size">CURRENT LEVEL 12</h2>
             </div>
         </div>
 
@@ -36,22 +40,3 @@
                 <span class="text-responsive sub-text-size">LV.14</span>
             </div>
         </div>
-
-        <div class="shelf shelf-bottom">
-            <div class="challenge-box">
-                <img src="img/challenge.png" alt="Challenge Z" class="img-responsive challenge-size">
-                <h3 class="text-responsive title-size challenge-color">CHALLENGE-Z</h3>
-            </div>
-        </div>
-
-        <nav class="menu-bar">
-            <button type="button">PROFILE</button>
-            <button type="button">SHOP</button>
-            <button type="button">RANK</button>
-            <button type="button">FAME</button>
-        </nav>
-
-    </div>
-
-</body>
-</html>
