--- a/index.html
+++ b/index.html
@@ -1,63 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha-Z Level Select</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Alpha-Z</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
-    <div class="game-wrapper">
+    <div class="title-wrapper">
+        <h1 class="game-logo">ALPHA-Z</h1>
+        <p class="subtitle">The Archive of Legends</p>
         
-        <div class="logo-spacer"></div>
-
-        <div class="shelf shelf-top">
-            
-            <div class="top-icons-row">
-                <img src="img/shop.png" alt="Shop" class="icon-btn">
-                <img src="img/profile.png" alt="Profile" class="icon-btn">
-            </div>
-
-            <div class="level-box main-level-container">
-                <img src="img/current.png" alt="Current Level" class="img-responsive main-size">
-                <h2 class="text-responsive main-text-size">CURRENT LEVEL 12</h2>
-            </div>
-        </div>
-
-        <div class="shelf shelf-middle">
-            <div class="book-item">
-                <img src="img/cleared.png" alt="Cleared" class="img-responsive sub-size">
-                <span class="text-responsive sub-text-size">LV.10</span>
-            </div>
-            <div class="book-item">
-                <img src="img/cleared.png" alt="Cleared" class="img-responsive sub-size">
-                <span class="text-responsive sub-text-size">LV.11</span>
-            </div>
-
-            <div class="book-item">
-                <img src="img/locked.png" alt="Locked" class="img-responsive sub-size">
-                <span class="text-responsive sub-text-size">LV.13</span>
-            </div>
-            <div class="book-item">
-                <img src="img/locked.png" alt="Locked" class="img-responsive sub-size">
-                <span class="text-responsive sub-text-size">LV.14</span>
-            </div>
-        </div>
-
-        <div class="shelf shelf-bottom">
-            <div class="challenge-box">
-                <img src="img/challenge.png" alt="Challenge Z" class="img-responsive challenge-size">
-                <h3 class="text-responsive challenge-text-size challenge-color">CHALLENGE-Z</h3>
-            </div>
-        </div>
-
-        <nav class="menu-bar">
-            <button type="button">RANK</button>
-            <button type="button">FAME</button>
-        </nav>
-
+        <a href="challenge/" class="start-btn">TOUCH TO START</a>
     </div>
-
 </body>
 </html>
