--- a/index.html
+++ b/index.html
@@ -1,41 +1,31 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alpha-Z</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="manifest" href="manifest.json"> </head>
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="manifest" href="manifest.json">
+</head>
 <body>
-    <header style="margin-top: 50px; text-align: center;">
-        <h1 style="font-size: 3rem; margin-bottom: 10px;">Alpha-Z</h1>
-        <div id="user-level-display">Lv. <span id="current-level">1</span> (초심자)</div>
-    </header>
-
-    <main style="display: flex; flex-direction: column; gap: 15px; width: 80%; max-width: 400px; margin-top: 40px;">
-        <button class="btn-primary" onclick="location.href='game_main.html'" style="height: 80px; font-size: 1.2rem;">
-            📚 메인 스토리 진행
-        </button>
-
-        <button class="btn-primary" onclick="openChallengeModal()" style="background-color: #d35400;">
-            🏆 도전 Z (Challenge)
-        </button>
-
-        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-            <button class="btn-secondary" onclick="location.href='store.html'">🛒 상점</button>
-            <button class="btn-secondary" onclick="location.href='profile.html'">👤 프로필</button>
-            <button class="btn-secondary" onclick="location.href='leaderboard.html'">📊 랭킹</button>
-            <button class="btn-secondary" onclick="location.href='hall_of_fame.html'">🏛 명예의 전당</button>
-        </div>
-    </main>
-
-    <script src="js/common.js"></script>
+    <div class="container">
+        <h1>Alpha-Z</h1>
+        <div id="user-level-display">Level: <span id="current-level">1</span></div>
+        
+        <nav class="main-menu">
+            <button class="btn-joseon" onclick="location.href='main-game.html'">Main Game (Word Quest)</button>
+            <button class="btn-joseon" onclick="location.href='challenge-z.html'">Challenge Z</button>
+            <button class="btn-joseon" onclick="location.href='shop.html'">Merchant</button>
+            <button class="btn-joseon" onclick="location.href='leaderboard.html'">Leaderboard</button>
+            <button class="btn-joseon" onclick="location.href='hall-of-fame.html'">Hall of Fame</button>
+            <button class="btn-joseon" onclick="location.href='profile.html'">My Profile</button>
+        </nav>
+    </div>
+    
+    <script type="module" src="js/firebase-config.js"></script>
     <script>
-        function openChallengeModal() {
-            // 난이도 선택 팝업 로직 (Normal, Hard, Extreme 버튼)
-            // 선택 시 game_challenge.html?diff=normal 형태로 이동
-            alert("난이도를 선택하세요: Normal / Hard / Extreme"); 
-            location.href='game_challenge.html?diff=normal';
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js');
         }
     </script>
 </body>
