--- a/main-game.html
+++ b/main-game.html
@@ -1,13 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Main Game - Word Quest</title>
+    <link rel="stylesheet" href="css/global.css">
+    <style>
+        .target-box { 
+            background: #fff; color: #000; padding: 10px; 
+            border: 2px solid var(--accent-gold); margin: 10px; 
+            font-size: 1.5rem;
+        }
+    </style>
+</head>
 <body>
-    <div class="game-container">
-        <div class="target-display">
-            <span>목표 단어:</span>
-            <div class="target-word" id="target-word">AD</div>
+    <div class="container">
+        <div class="header">
+            <button onclick="location.href='index.html'">Home</button>
+            <span>Level <span id="level">1</span></span>
         </div>
 
-        <div class="grid-container grid-4x4" id="main-grid">
+        <div class="target-box">
+            Goal: <span id="target-word">AD</span>
+        </div>
+
+        <div id="grid" class="grid-container" style="grid-template-columns: repeat(4, 1fr); grid-template-rows: repeat(4, 1fr);">
             </div>
     </div>
-    <script src="js/game-core.js"></script>
-    <script src="js/main-game-logic.js"></script>
+
+    <script type="module">
+        // Import game engine
+        let currentTarget = "AD";
+
+        // This function runs after every move
+        function checkWinCondition(grid) {
+            // Scan grid for horizontal or vertical adjacency of Target
+            // e.g., if target is AD, look for A next to D
+            
+            // If found:
+            alert("Success! Moving to next level.");
+            // Update Firebase User Level
+            // Generate new harder target (e.g., 3 letters 'CAT')
+        }
+    </script>
 </body>
+</html>
